[package]
name = "fasb"
version = "0.1.1"
edition = "2021"
authors = ["drwadu"]
description = "fasb - faceted answer set browser"
repository = "https://github.com/drwadu/fasb"
license = "MIT"

[dependencies]
rustyline = "11.0.0"
regex = "1"
savan = { git = "https://github.com/drwadu/savan.git", branch = "feature/iascar" }

[features]
verbose = []
interpreter = []

[[bin]]
name = "fasb"
path = "src/main.rs"
edition = "2021"   
