[package]
name = "fasb"
version = "0.2.3"
edition = "2021"
authors = ["drwadu"]
description = "fasb - faceted answer set browser"
repository = "https://github.com/drwadu/fasb"
license = "MIT"

[dependencies]
rustyline = "11.0.0"
regex = "1"
savan = "0.3.2"

[features]
interpreter = []

[[bin]]
name = "fasb"
path = "src/main.rs"
edition = "2021"   

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
